Added custom fonts, changed home screen design, added video view functionality

--- a/Scuola/Info.plist
+++ b/Scuola/Info.plist
@@ -4,5 +4,11 @@
 <dict>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<string>NO</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Radikal-Medium.otf</string>
+		<string>RadikalTrial-Thin.otf</string>
+		<string>RadikalTrial-UltraThin.otf</string>
+	</array>
 </dict>
 </plist>
